--- a/config/database.yml
+++ b/config/database.yml
@@ -8,6 +8,14 @@ development:
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
+  
+# development:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: development
+#   pool: 5
+#   username: blog
+#   password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
